NYSD9-412: Fixed the styling display for the Constituent Bills view Constituent Bills Voted On display. Fixed the WHAT'S YOUR POSITION? label based from whichever is the vote of the user on the Dashboard Bills. Removed the Subscribe button on the Dashboard Bills. Also fixed an error encountered on the BillForm when processing the Vote (billVoteHelper->processVote()). TO DO: Alignment styling of the Bill Vote Widget buttons when there is no Subscribe button.

--- a/web/themes/custom/nysenate_theme/src/patterns/components/bill-item/bill-item.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/bill-item/bill-item.scss
@@ -144,13 +144,32 @@ h3.c-bill-num {
   }
 
   &.c-block-constituent-bill {
-
     .nys-bill-status.nys-bill-status__drk {
 
       li {
 
         &.passed {
           background: $grey05;
+        }
+      }
+    }
+
+    p.c-bill-update--location {
+      a {
+        color: $color-white;
+      }
+    }
+
+    .sponsors {
+      span.sponsor-name {
+        font-size: 16px;
+        line-height: 23px;
+        font-family: "Adelle Light";
+        margin: 0;
+        text-transform: none;
+
+        a {
+          color: #fff;
         }
       }
     }
@@ -300,9 +319,9 @@ h3.c-bill-num {
 /*----------------------------------------
 / BILL STATUS
 / styling for a list denoting a bill's status
-/ list items are circle 
-/ add 'passed' class to illustrate we're 
-/	passed that step	
+/ list items are circle
+/ add 'passed' class to illustrate we're
+/	passed that step
 /----------------------------------------*/
 
 .c-bill-section {
@@ -382,7 +401,7 @@ h3.c-bill-num {
       }
     }
 
-    /* 
+    /*
 			spacer is necessary to pull off
 			justified lists
 		*/
